# agent-quant-mvp

./: .gitignore  README.md  pyproject.toml  setup.cfg
scripts/: run_binance_paper.py  run_demo.py  run_evals.py
src/agent_quant_mvp/: __init__.py  agents.py  api.py  backends.py  data.py  database.py  factors.py  knowledge.py  paper.py  runner.py  tools.py
src/agent_quant_platform/: __init__.py  agents.py  api.py  backtest.py  data.py  database.py  evals.py  models.py  runner.py  storage.py  workflow.py
tests/: test_workflow.py
