[metadata]
name = agent-quant-mvp
version = 0.2.0
description = Binance Spot paper-trading MVP with structured AI agent workflow.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    fastapi>=0.115.0
    pydantic>=2.8.0
    sqlalchemy>=2.0.36
    psycopg[binary]>=3.2.3
    uvicorn>=0.30.0

[options.packages.find]
where = src
